--- a/home/index/index.html
+++ b/home/index/index.html
@@ -255,7 +255,7 @@
   <div class="container">
     <div class="row" id="imaged">
        <div class="col-sm-2">
-         <a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/categories/tours/table.html">
+         <a href="https://www.google.com/maps/d/edit?mid=1s2ZhSylhiatnyVHA7mdWp3VQidfxDdUA&ll=7.720483798814996%2C80.20659910937502&z=8">
          <img src="imagez\boat.png" id="imagex"> <br>
          Tours
        </a>
@@ -263,12 +263,14 @@
 
        <div class="col-sm-2">
          
-          <a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/categories/WildlifeAndParks/table.html">
+          <a href="https://www.google.com/maps/d/edit?mid=1HVBNHxbiSEzmPTdCl3w49d1YYt1um1ql&ll=7.863821109889235%2C80.78779460000003&z=7">
           <img src="imagez\dear.png" id="imagex"> <br>Parks
         </a>
        </div> 
      <div class="col-sm-2">
+     	<a href="https://www.google.com/maps/d/edit?mid=19vRdhBOUtpmSOfY0FQf-musnEbOhm45d&ll=7.863821109889235%2C80.78779460000003&z=7">
         <img src="imagez\hiking.png" id="imagex"> <br> Hiking
+    </a>
      </div> 
        <div class="col-sm-2">
         <!--a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/categories/Beach%20Activities/table.html"-->
@@ -277,8 +279,8 @@
         </a>
        </div> 
         <div class="col-sm-2">
-        	<a href="https://www.google.com/maps/d/edit?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L&usp=sharing">
-           <img src="imagez\heli.png" id="imagex"> <br>
+        	<a href="https://www.google.com/maps/d/edit?mid=16keH0dYKsZIkyly-tPtEy3O9hdW6Vx1S&ll=7.863821109889235%2C80.78887450000002&z=7">
+           <img src="imagez\heli.png" id="imagex"> <br>Anciant Places
        </a>
         </div> 
        <div class="col-sm-2">
