--- a/home/index/index.html
+++ b/home/index/index.html
@@ -75,7 +75,7 @@
                              	<a href="register/login.php"><center><h4 class="bg-success text-white">Login</h4></center></a>
                              	</div>
                              </div> 
-                             <div class="col-md-6 border border-dark logc text-dark">
+                             <div class="col-md-6 border border-success logc text-dark bg-success">
                              		<h1 class="display-4 font-weight-bold ">Are you a Guid?</h1> 
                              			<h3>paragraph </h3>
                              			<div class="bg-dark logx">
