--- a/home/index/index.html
+++ b/home/index/index.html
@@ -70,15 +70,16 @@
                           <div class="row ">
                              <div class="col-md-6 border border-success logc text-success ">
                              	<h1 class="display-4 font-weight-bold ">Are you a traveller?</h1> 
-                             	<h3>paragraph </h3>
-                             	<div class="bg-success logx">
+                             	<h5>Join with us to find out favourite destinations in Sri Lanka and you can easily find out nearby hotels, restuarants, pubs and bars.
+                             	It will make easy to find out travel guide to make your trip smoother.</h5>
+                             	<div class="bg-success logx"  style="margin-top:10%;">
                              	<a href="register/login.php"><center><h4 class="bg-success text-white">Login</h4></center></a>
                              	</div>
                              </div> 
                              <div class="col-md-6 border border-success logc text-dark bg-success">
-                             		<h1 class="display-4 font-weight-bold ">Are you a Guid?</h1> 
-                             			<h3>paragraph </h3>
-                             			<div class="bg-dark logx">
+                             		<h1 class="display-4 font-weight-bold ">Are you a Guide?</h1> 
+                             			<h5>Post your service as a travel guide and you can get a major benefit like finding customers very easily.</h5>
+                             			<div class="bg-dark logx" style="margin-top:20%;">
                              			<a href="register/login.php"><center><h4 class="text-white">Login</h4></center></a>
                              			</div>
                              </div> 
@@ -125,7 +126,7 @@
                     <!--div class="border"></div-->
                 </h3>
                 <ol>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque officiis quos expedita ipsa, a quidem inventore voluptates debitis accusamus tenetur qui et voluptas dicta, culpa earum, doloribus odio consectetur consequuntur soluta quasi nobis! Deserunt voluptatum reiciendis iure expedita sequi quisquam laboriosam temporibus exercitationem.</p>
+                    <h5>The AroundLanka website makes it easy to find specisl destinations of your choice in Sri Lanka as well as the hotels, villas and many other places where you can find accommodations. This site also does help to find your clients as a guide. </h5>
                 </ol>
                 
             </div>
