--- a/home/index/index.html
+++ b/home/index/index.html
@@ -59,7 +59,45 @@
                     <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
                   </form>
 
-  					 <li class="nav-item active nav-link loging" id="myBtn"><!--a href="register/login.php" -->Login<!---/a-->
+
+ <!-----*Login Button-------------------->                 
+
+                <!-- id="myBtn"  -->  <!--onclick="document.getElementById('id01').style.display='block'" -->
+                <li class="nav-item active nav-link loging" onclick="document.getElementById('id01') > <!--a href="register/login.php" -->Login<!---/a-->
+                <!--button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button-->
+
+<div id="id01" class="modal">
+  
+  <form class="modal-content animate" action="/action_page.php" method="post">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    </div>
+
+    <div class="container">
+      <label for="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+        
+      <button type="submit">Login</button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember"> Remember me
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+      <span class="psw">Forgot <a href="#">password?</a></span>
+    </div>
+  </form>
+</div>
+
+
+
+<!------sign up button---------------------------------------------->
+			  		<li class="nav-item active nav-link singup" id="myBtn"><!--a href="register/login.php" -->Sign up<!---/a-->
   					 <!-- The Modal -->
 	                      <div id="myModal" class="modal">
 
@@ -69,18 +107,18 @@
                           <div class="container">
                           <div class="row ">
                              <div class="col-md-6 border border-success logc text-success ">
-                             	<h1 class="display-4 font-weight-bold ">Are you a traveller?</h1> 
+                             	<h1 class="display-4 font-weight-bold ">Traveller</h1> 
                              	<h5>Join with us to find out favourite destinations in Sri Lanka and you can easily find out nearby hotels, restuarants, pubs and bars.
                              	It will make easy to find out travel guide to make your trip smoother.</h5>
                              	<div class="bg-success logx"  style="margin-top:10%;">
-                             	<a href="register/login.php"><center><h4 class="bg-success text-white">Login</h4></center></a>
+                             	<a href="register/login.php"><center><h4 class="bg-success text-white">Sign</h4></center></a>
                              	</div>
                              </div> 
                              <div class="col-md-6 border border-success logc text-dark bg-success">
-                             		<h1 class="display-4 font-weight-bold ">Are you a Guide?</h1> 
+                             		<h1 class="display-4 font-weight-bold ">Guide</h1> 
                              			<h5>Post your service as a travel guide and you can get a major benefit like finding customers very easily.</h5>
                              			<div class="bg-dark logx" style="margin-top:20%;">
-                             			<a href="register/login.php"><center><h4 class="text-white">Login</h4></center></a>
+                             			<a href="register/login.php"><center><h4 class="text-white">Sign</h4></center></a>
                              			</div>
                              </div> 
                           </div>  
@@ -89,7 +127,10 @@
                     </li>
                     <!-- Trigger/Open The Modal -->
 					<!--li><button id="myBtn">Open Modal</button></li-->
-                    <li class="nav-item"><a href="register/register.php" class="nav-link">Signup</a></li>
+
+			<!----------------------------------------------------------------------------------------------------------->
+                    <!--li class="nav-item"><a href="register/register.php" class="nav-link">Signup</a-->
+                    </li>
                   </ul>
             </div>
 
@@ -344,3 +385,33 @@
 
 </html>
 
+<!-------------------------------------------------------------------------------------------------------------------------->
+  				<!--	 <li class="nav-item active nav-link loging" id="myBtn"><!--a href="register/login.php" --><!--Login<!---/a-->
+  					 <!-- The Modal -->
+	           <!--           <div id="myModal" class="modal">
+
+                        <!-- Modal content -->
+                <!--        <div class="modal-content">
+                          <span class="close"></span>
+                          <div class="container">
+                          <div class="row ">
+                             <div class="col-md-6 border border-success logc text-success ">
+                             	<h1 class="display-4 font-weight-bold ">Traveller</h1> 
+                             	<h5></h5>
+                             	<div class="bg-success logx"  style="margin-top:10%;">
+                             	<a href="register/login.php"><center><h4 class="bg-success text-white">Login</h4></center></a>
+                             	</div>
+                             </div> 
+                             <div class="col-md-6 border border-success logc text-dark bg-success">
+                             		<h1 class="display-4 font-weight-bold ">Guide</h1> 
+                             			<h5></h5>
+                             			<div class="bg-dark logx" style="margin-top:20%;">
+                             			<a href="register/login.php"><center><h4 class="text-white">Login</h4></center></a>
+                             			</div>
+                             </div> 
+                          </div>  
+                          </div>
+                        </div>
+                    </li> -->
+                    <!-- Trigger/Open The Modal -->
+					<!--li><button id="myBtn">Open Modal</button></li-->
