--- a/home/index/index.html
+++ b/home/index/index.html
@@ -98,6 +98,7 @@
                              			<div>
 
                              	<!---form of guid-->
+                             	<form>
                              	    <div class="container">
 									      <label for="uname"><b>Username</b></label>
 									      <input type="text" placeholder="Enter Username" name="uname" required>
@@ -110,6 +111,7 @@
 									        <input type="checkbox" checked="checked" name="remember"> Remember me
 									      </label>
 									   </div>
+									</form>
                              			</div>
                              </div> 
                           </div>  
