--- a/home/index/index.html
+++ b/home/index/index.html
@@ -124,7 +124,7 @@
 <!------sign up button---------------------------------------------->
 			  		<li class="nav-item active nav-link singup" id="myBtns"><!--a href="register/login.php" -->Sign up<!---/a-->
   					 <!-- The Modal -->
-	                      <div id="myModals" class="modal">
+	                      <div id="myModal" class="modal">
 
                         <!-- Modal content -->
                         <div class="modal-content">
