--- a/home/index/index.html
+++ b/home/index/index.html
@@ -62,7 +62,7 @@
 
  <!----------Login button----->
 
-	<li class="nav-item active nav-link singup" id="myBtn"><!--a href="register/login.php" -->Login<!---/a-->
+	<li class="nav-item active nav-link singup" id="myBtn" style="cursor: pointer;"><!--a href="register/login.php" -->Login<!---/a-->
   					 <!-- The Modal -->
 	                      <div id="myModal" class="modal">
 
@@ -124,13 +124,13 @@
 
 
 <!------sign up button---------------------------------------------->
-			  		<li class="nav-item active nav-link singup" id="myBtns"><!--a href="register/login.php" -->Sign up<!---/a-->
+			  		<li class="nav-item active nav-link singup" id="myBtns" style="cursor: pointer;"><!--a href="register/login.php" -->Sign up<!---/a-->
   					 <!-- The Modal -->
 	                      <div id="myModals" class="modal">
 
                         <!-- Modal content -->
                         <div class="modal-content">
-                          <span class="close"></span>
+                          <span class="close"></span> 
                           <div class="container">
                           <div class="row ">
                              <div class="col-md-6 border border-success logc text-success ">
