--- a/home/index/index.html
+++ b/home/index/index.html
@@ -352,8 +352,8 @@
        </a>
         </div> 
        <div class="col-sm-2">
-        <a href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/Catgry/categories/OffRoad/table.html">
-           <img src="imagez\images.png" id="imagex"><br>Off Road
+        <a href="https://www.google.com/maps/d/edit?mid=1Bk42bLlrU-yIqTX4MAv7ghGFao4K4c2V&usp=sharing">
+           <img src="imagez\camara.png" id="imagex"><br>Special
          </a>
         </div> 
     </div>  
