--- a/home/index/Travel Plan/plan.html
+++ b/home/index/Travel Plan/plan.html
@@ -42,7 +42,7 @@
                             <li class="card-text text-light d-flex justify-content-center"> <p  class="card-text text-light">You can discuss about your destination</p></li>
                         </ul>
                       
-                      <a href="#!" class="btn btn-primary  d-flex justify-content-center">Yes I'want</a><br>
+                      <a href="#fname" target="#fname" class="btn btn-primary  d-flex justify-content-center">Yes I'want</a><br>
                       <a href="#!" class="btn btn-primary  d-flex justify-content-center">No I didn't</a>
                     </div>
                   </div>
@@ -57,7 +57,7 @@
         <!--topic-->
         <div class="jumbotron jumbotron-fluid bg-success text-center">
             <div class="container ">
-              <h1 class="display-3 text-light" id="agentTopic">Meet your agent</h1>
+              <a  name="fname"><h1 class="display-3 text-light" id="agentTopic">Meet your agent</h1></a>
               <p class="lead text-light"  id="agentTopic">Click on "Start Chat" to start a chat</p>
             </div>
           </div>
