add privacy policy

--- a/home/index/index.html
+++ b/home/index/index.html
@@ -34,9 +34,10 @@
                             Attraction</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html">Explore</a>
-                            <a class="dropdown-item" href="#!">Best tourist destinations</a>
+                            <a class="dropdown-item" href="#exname" target="#exname">Best tourist destinations</a>
                         </div>
                     </li>
+                  
                 
                     <!--About Us dropdown-->
                       <li class="nav-item dropdown">
@@ -278,7 +279,9 @@
         </div>
     </div>
     <!--slide shaw-->
-      <h1 class="display-2 text-secondary col-sm-12 font-weight-bold">Top Trending Destinations</h1>
+      <a  name="exname">
+      	<h1 class="display-2 text-secondary col-sm-12 font-weight-bold">Top Trending Destinations</h1>
+
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -326,6 +329,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+      </a>
 <div class="container">
     <div class="row">
        <div class="col-md-6">
