contact us already done

--- a/home/about us/about/about.html
+++ b/home/about us/about/about.html
@@ -2,15 +2,25 @@
 <html>
 <head>
 	<title>About Us</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 	<link rel="stylesheet" href="C:\xampp\htdocs\CA-web-development-project\home\about us\about\style.css">
 </head>
 <body>
 	<div class="header">
 		<div class="main">
-		<h1>About Us..</h1>
-		<p>
-			gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi<br>gudwgidagiakdbabcjbkcbzkbckzbckduccbscjbbcbucsiucsi
-		</p>
+		<h1 class="display-2 text-secondary col-sm-12 font-weight-bold">About Around Lanka</h1>
+		<h5>
+			
+
+We are a main online travel organization in Sri Lanka giving a ‘best as far as class can tell with the objective to be ‘ America ‘s Travel Planner’. Through our site, www.’Company Name’.com, our versatile applications and our other related stages, recreation and business voyagers can investigate, explore, analyze costs and book an extensive variety of administrations taking into account their movement needs.
+
+<br>
+
+Since our origin in 2020, in excess of 7 million clients have utilized at least one of our exhaustive travel-related administrations, which incorporate local and global air ticketing, lodging appointments, homestays, occasion bundles, transport ticketing, rail ticketing, exercises and subordinate administrations.
+
+With more than 83,000 inns contracted crosswise over America, we are America ‘s biggest stage for residential lodgings.
+		</h5>
 		<button class="btn">Read More</button>
 		</div>
     </div>
