--- a/home/about us/contact/contact.html
+++ b/home/about us/contact/contact.html
@@ -2,25 +2,55 @@
 <html>
 <head>
 	<title>Contact From Design</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 	<link rel="stylesheet" type="text/css" href="C:\xampp\htdocs\CA-web-development-project\home\about us\contact\style.css">
 </head>
 <body>
 	<div class="Contact-title">
-		<h1>Contact Us</h1>
-		<h2>We are always ready to serve you!</h2>
+		<h1 class="display-1 text-light col-sm-12 font-weight-bold ">Contact Us</h1>
+		<h2 class="display-2 col-sm-12 font-weight-bold" style="color: black;">We are always ready to serve you!</h2>
 	</div>
+	<div class="container">
+    <div class="row" style="background: white; opacity: 80%;">
+       <div class="col-md-6">
+       	  	<br>
+       		<h3 style="font-weight: 600;">Our Address</h3>
+       		<br>
+       		          069, Clear Water Bay Road<br>
+                      Clear Water Bay, Kowloon<br>
+                      HONG KONG<br>
+                      Tel.: +9411 2345 345<br>
+                      Fax:  +9411 2345 345<br>
+                      Email: <a href="mailto:confusion@food.net">aroundlanka@info.com</a>
 
-	<div class="contact-form">
+                      <br>
+          				<br>
+
+                      <iframe src="https://www.google.com/maps/d/embed?mid=1ScDk33qmaxr5SgmDexBS7CcgunS8Wyib" width="350" height="350"></iframe>
+       </div> 
+       
+
+    
+       <div class="col-md-6">
+       		<br>
+       		<h3 style="text-align: left; font-weight: 600;">Message Us</h3>
+
+       		<div class="contact-form">
 		<form id="contact-form" method="post" action="contact-form.php">
-		<input type="text" name="name" class="form-control" placeholder="Your Name" required><br>
-		<input type="email" name="email" class="form-control" placeholder="Your Email" required><br> 
-		<textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea><br>
-		<input type="submit" class="form-control submit" value="Submit">
+			<input type="text" name="name" class="form-control" placeholder="Your Name" required><br>
+			<input type="email" name="email" class="form-control" placeholder="Your Email" required><br> 
+			<textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea><br>
+			<input type="submit" class="form-control submit" value="Submit">
 
-	</form>
+		</form>
 
 
 	</div>
+       </div> 
+    </div>   
+
+
 
 </body>
 </html>
