--- a/home/about us/contact/contact.html
+++ b/home/about us/contact/contact.html
@@ -17,12 +17,14 @@
        	  	<br>
        		<h3 style="font-weight: 600;">Our Address</h3>
        		<br>
-       		          069, Clear Water Bay Road<br>
-                      Clear Water Bay, Kowloon<br>
-                      HONG KONG<br>
+       		         <p style="text-align: left; margin-left: 20%;"> No: 069<br>
+                      Pitipana - Thalagala Rd<br>
+                      Homagama<br>
+                      Colombo<br>
+                      Sri Lanka<br>
                       Tel.: +9411 2345 345<br>
                       Fax:  +9411 2345 345<br>
-                      Email: <a href="mailto:confusion@food.net">aroundlanka@info.com</a>
+                      Email: <a href="mailto:confusion@food.net">aroundlanka@info.com</a></p>
 
                       <br>
           				<br>
@@ -41,7 +43,7 @@
 			<input type="text" name="name" class="form-control" placeholder="Your Name" required><br>
 			<input type="email" name="email" class="form-control" placeholder="Your Email" required><br> 
 			<textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea><br>
-			<input type="submit" class="form-control submit" value="Submit">
+			<input type="submit" class="form-control submit bg-success" value="Submit">
 
 		</form>
 
