--- a/home/index/index.html
+++ b/home/index/index.html
@@ -262,7 +262,9 @@
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <p>You can make your  own plan to your trip by our site.It is very easy to find popular places, hotels, restuarants, pubs and other special places. <br>
+                </p>
+                
             </div>
         </div>
 
