--- a/home/index/index.html
+++ b/home/index/index.html
@@ -263,7 +263,10 @@
             <div class="col col-sm order-sm-first col-md">
                 <h2>Uthappizza</h2>
                 <p>You can make your  own plan to your trip by our site.It is very easy to find popular places, hotels, restuarants, pubs and other special places. <br>
-                </p>
+                Also you can explore different kinds of place categories such as beach activities, 
+
+            how to make a trip?
+        how ro </p>
                 
             </div>
         </div>
