--- a/home/about us/contact/contact.html
+++ b/home/about us/contact/contact.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="Contact-title">
 		<h1 class="display-1 text-light col-sm-12 font-weight-bold ">Contact Us</h1>
-		<h2 class="display-2 col-sm-12 font-weight-bold" style="color: black;">We are always ready to serve you!</h2>
+		<h2 class="display-3 col-sm-12 font-weight-bold" style="color: #D0CECE;">We are always ready to serve you!</h2>
 	</div>
 	<div class="container">
     <div class="row" style="background: white; opacity: 80%;">
