--- a/home/index/index.html
+++ b/home/index/index.html
@@ -8,8 +8,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="includes/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="file:///C:/xampp/htdocs/CA-web-development-project/top%20agent/top.css">
     <link rel="stylesheet" href="includes/style/parallex-style.css">
     <link rel="stylesheet" href="includes/style/index-style.css">
+    
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>  
     <title>Home</title>
 </head>
 
@@ -255,7 +258,7 @@
     
 
 
-    <div class="container">
+    <!--div class="container">
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -292,7 +295,94 @@
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
             </div>
         </div>
-    </div>
+    </div-->
+
+          <section class="agentsection">
+          <div class="container">
+
+              <h1 class="heading">Top Agents</h1>
+              <div class="card-wrapper row"style="display: inline-block;">
+                  <div class="card col-md-6 col-lg-3" >
+                      <img src="imagez/background 1.jpg" alt="card background" class="card-img">
+                      <img src="imagez/logo1.jpg" alt="profile image" class="profile-img">
+                      <h1>Michille Gomes</h1>
+                      <p class="job-title">Lead Designer</p>
+                      <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                          Esse, officiis obcaecati asperiores voluptas ducimus est. 
+                          Atque nesciunt eveniet commodi natus eos quo, 
+                          veritatis soluta temporibus repudiandae velit sequi, 
+                          porro doloribus.
+                        </p>
+                        <a href="#" class="btn">Contact</a>
+                        <ul class="social-media">
+                            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                        </ul>
+                  </div>
+                  <div class="card col-md-6 col-lg-3">
+                    <img src="imagez/background 2.jpg" alt="card background" class="card-img">
+                    <img src="imagez/logo2.png" alt="profile image" class="profile-img">
+                    <h1>Michille Gomes</h1>
+                    <p class="job-title">Lead Designer</p>
+                    <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Esse, officiis obcaecati asperiores voluptas ducimus est. 
+                        Atque nesciunt eveniet commodi natus eos quo, 
+                        veritatis soluta temporibus repudiandae velit sequi, 
+                        porro doloribus.
+                      </p>
+                      <a href="#" class="btn">Contact</a>
+                      <ul class="social-media">
+                          <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                          <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                          <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                      </ul>
+                </div>
+
+                <div class="card col-md-6 col-lg-3" >
+                    <img src="imagez/background 3.jpg" alt="card background" class="card-img">
+                    <img src="imagez/logo3.jfif" alt="profile image" class="profile-img">
+                    <h1>Michille Gomes</h1>
+                    <p class="job-title">Lead Designer</p>
+                    <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Esse, officiis obcaecati asperiores voluptas ducimus est. 
+                        Atque nesciunt eveniet commodi natus eos quo, 
+                        veritatis soluta temporibus repudiandae velit sequi, 
+                        porro doloribus.
+                      </p>
+                      <a href="#" class="btn">Contact</a>
+                      <ul class="social-media">
+                          <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                          <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                          <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                      </ul>
+                </div>
+                <div class="card col-md-6 col-lg-3" >
+                    <img src="imagez/background 4.jpg" alt="card background" class="card-img">
+                    <img src="imagez/logo4.jfif" alt="profile image" class="profile-img">
+                    <h1>Michille Gomes</h1>
+                    <p class="job-title">Lead Designer</p>
+                    <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Esse, officiis obcaecati asperiores voluptas ducimus est. 
+                        Atque nesciunt eveniet commodi natus eos quo, 
+                        veritatis soluta temporibus repudiandae velit sequi, 
+                        porro doloribus.
+                      </p>
+                      <a href="#" class="btn">Contact</a>
+                      <ul class="social-media">
+                          <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                          <li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+                          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                          <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                      </ul>
+                </div>
+
+              </div>
+          </div>
+      </section>
     <!--slide shaw-->
       <a  name="exname">
       	<h1 class="display-2 text-secondary col-sm-12 font-weight-bold">Top Trending Destinations</h1>
