--- a/top agent/top.html
+++ b/top agent/top.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-      <section>
+      <section style=" padding: 10rem 0; background-color: #fff;">
           <div class="container">
               <h1 class="heading">Top Agents</h1>
               <div class="card-wrapper">
