--- a/home/index/index.html
+++ b/home/index/index.html
@@ -10,8 +10,56 @@
     <link rel="stylesheet" href="includes/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="includes/style/parallex-style.css">
     <link rel="stylesheet" href="includes/style/index-style.css">
+    <link rel="stylesheet" type="text/css" href="style/top.css">
     <style type="text/css">
-    	.social-media
+.card h1
+{
+    font-size: 2rem;
+    color: #333;
+    margin: 1.5rem 0;
+
+}
+.job-title
+{
+    color: #777;
+    font-size: 1rem;
+    font-weight: 300;
+    
+}
+
+.about 
+{
+    font-size: 1rem;
+    margin: 1.5rem 0;
+    font-style: italic;
+    text-align: center;
+    color: #333;
+}
+
+.card .btn 
+{
+    padding: 1rem 2.5rem;
+    background-color: #445ae3;
+    border-radius: 2rem;
+    margin: 1rem 0;
+    text-transform: uppercase;
+    color: #eee;
+    font-size: 1.4rem;
+    transition: all .5s;
+}
+
+.card .btn:hover 
+{
+    transform: translateY(-2px);
+    box-shadow: .5rem .5rm 2rem rgba(0,0,0,.2);
+}
+
+.card .btn:active
+{
+    transform: translateY(0);
+    box-shadow: none;
+}
+.social-media
 {
     width: 100%;
     list-style: none;
@@ -57,6 +105,33 @@
    color: #45e19f; 
 }
 
+.card{
+	   					width: 100%;
+   						 background-color: #ebeef8;
+   						 align-items: center;
+   						 justify-content: center;
+   						 margin: 0px;
+   						 box-shadow: .5rem .5rem 3rem rgba(0,0,0,0.2);
+
+}
+.card-img{
+	height: 15rem;
+	width: 100%;
+    object-fit: cover;
+    -webkit-clip-path: polygon(0 0, 100% 0,100% 78%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 71%, 0% 100%);"
+}
+
+.profile-img{
+	    width: 15rem;
+    height: 15rem;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-top: -11rem;
+    z-index: 999;
+    border: 1rem solid #ebeef8;
+
+}
 
 @media screen and (min-width: 700px) 
 {
@@ -398,44 +473,16 @@
     </div-->
 
     <!---Top Agent f* div -->
-    <h1 class="heading" 
-                          style="    
-                          text-transform: uppercase;
-                          font-size: 3.5rem;
-                          letter-spacing: 3px;
-                          margin-right: -3px;
-                          margin-bottom: 5rem;
-                          text-align: center;
-                          color: #333;
-                          position: relative;">Top Agents</h1>
+    <center><h3 class="heading display-3 text-secondary col-sm-12" >Connect With Our Top Agents</h1></center>
    
 
-    <center><div class="flex-container" style="width: 70rem;" >
-    <div class="row" style="background: yellow">
+  <div class="fcontainer" style="width: 95%;" >
+    <div class="row">
        <div class="col-3">
-          <div class="card" style="    
-   						 width: 17rem;
-   						 background-color: #ebeef8;
-   						 display: flex;
-   						 flex-direction: column;
-   						 align-items: center;
-   						 justify-content: center;
-   						 margin: 2rem 0;
-   						 box-shadow: .5rem .5rem 3rem rgba(0,0,0,0.2);">
-                      <img src="imagez/background 1.jpg" alt="card background" class="card-img" style="    
-    width: 100%;
-    height: 26rem;
-    object-fit: cover;
-    -webkit-clip-path: polygon(0 0, 100% 0,100% 78%, 0% 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 71%, 0% 100%);">
+          <div class="card">
+                      <img src="imagez/background 1.jpg" alt="card background" class="card-img">
                       <img src="imagez/logo1.jpg" alt="profile image" class="profile-img" style=" 
-    width: 15rem;
-    height: 15rem;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-top: -11rem;
-    z-index: 999;
-    border: 1rem solid #ebeef8;">
+">
                       <h1>Michille Gomes</h1>
                       <p class="job-title">Lead Designer</p>
                       <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -455,28 +502,9 @@
        </div> 
        <div class="col-3">
                     <div class="card" style="    
-   						 width: 17rem;
-   						 background-color: #ebeef8;
-   						 display: flex;
-   						 flex-direction: column;
-   						 align-items: center;
-   						 justify-content: center;
-   						 margin: 2rem 0;
-   						 box-shadow: .5rem .5rem 3rem rgba(0,0,0,0.2);">
-                      <img src="imagez/background 1.jpg" alt="card background" class="card-img" style="    
-    width: 100%;
-    height: 26rem;
-    object-fit: cover;
-    -webkit-clip-path: polygon(0 0, 100% 0,100% 78%, 0% 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 71%, 0% 100%);">
-                      <img src="imagez/logo1.jpg" alt="profile image" class="profile-img" style=" 
-    width: 15rem;
-    height: 15rem;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-top: -11rem;
-    z-index: 999;
-    border: 1rem solid #ebeef8;">
+">
+                      <img src="imagez/background 1.jpg" alt="card background" class="card-img" >
+                      <img src="imagez/logo1.jpg" alt="profile image" class="profile-img">
                       <h1>Michille Gomes</h1>
                       <p class="job-title">Lead Designer</p>
                       <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -495,29 +523,9 @@
                   </div>
        </div> 
      <div class="col-3">
-                  <div class="card" style="    
-   						 width: 17rem;
-   						 background-color: #ebeef8;
-   						 display: flex;
-   						 flex-direction: column;
-   						 align-items: center;
-   						 justify-content: center;
-   						 margin: 2rem 0;
-   						 box-shadow: .5rem .5rem 3rem rgba(0,0,0,0.2);">
-                      <img src="imagez/background 1.jpg" alt="card background" class="card-img" style="    
-    width: 100%;
-    height: 26rem;
-    object-fit: cover;
-    -webkit-clip-path: polygon(0 0, 100% 0,100% 78%, 0% 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 71%, 0% 100%);">
-                      <img src="imagez/logo1.jpg" alt="profile image" class="profile-img" style=" 
-    width: 15rem;
-    height: 15rem;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-top: -11rem;
-    z-index: 999;
-    border: 1rem solid #ebeef8;">
+                  <div class="card">
+                      <img src="imagez/background 1.jpg" alt="card background" class="card-img">
+                      <img src="imagez/logo1.jpg" alt="profile image" class="profile-img">
                       <h1>Michille Gomes</h1>
                       <p class="job-title">Lead Designer</p>
                       <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -536,29 +544,9 @@
                   </div>
      </div> 
        <div class="col-3">
-                    <div class="card" style="    
-   						 width: 17rem;
-   						 background-color: #ebeef8;
-   						 display: flex;
-   						 flex-direction: column;
-   						 align-items: center;
-   						 justify-content: center;
-   						 margin: 2rem 0;
-   						 box-shadow: .5rem .5rem 3rem rgba(0,0,0,0.2);">
-                      <img src="imagez/background 1.jpg" alt="card background" class="card-img" style="    
-    width: 100%;
-    height: 26rem;
-    object-fit: cover;
-    -webkit-clip-path: polygon(0 0, 100% 0,100% 78%, 0% 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 71%, 0% 100%);">
-                      <img src="imagez/logo1.jpg" alt="profile image" class="profile-img" style=" 
-    width: 15rem;
-    height: 15rem;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-top: -11rem;
-    z-index: 999;
-    border: 1rem solid #ebeef8;">
+                    <div class="card">
+                      <img src="imagez/background 1.jpg" alt="card background" class="card-img">
+                      <img src="imagez/logo1.jpg" alt="profile image" class="profile-img" >
                       <h1>Michille Gomes</h1>
                       <p class="job-title">Lead Designer</p>
                       <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
