--- a/home/index/register/signx.html
+++ b/home/index/register/signx.html
@@ -19,7 +19,7 @@
                              			It will make easy to find out travel guide to make your trip smoother.</h4>
 									</div>
                              		<div class="bg-success logx">
-                             			<a href="register/login.php"><center><h3 class="bg-success text-white">Sign</h3></center></a>
+                             			<a href="register.php"><center><h3 class="bg-success text-white">Sign</h3></center></a>
                              		</div>
                              	</div> 
                             	
@@ -29,7 +29,7 @@
                              				<h4>Post your service as a travel guide and you can get a major benefit like finding customers very easily.</h4>
                              			</div>
                              			<div class="bg-dark logx">
-                             			<a href="register/login.php"><center><h3 class="text-white">Sign</h3></center></a>
+                             			<a href="Agent signup form/signup.php"><center><h3 class="text-white">Sign</h3></center></a>
                              			</div>
                              	</div> 
                         	</div> 
