--- a/home/index/index.html
+++ b/home/index/index.html
@@ -1,3 +1,4 @@
+<?php include('server.php'); ?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -237,7 +238,24 @@
                     <input class="form-control col-8 col-md-8 mr-sm-2" type="text" placeholder="Search">
                     <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
                   </form>
+<!--####################################################################################################################### -->
+                  <!-- login php part CREATE a SESSION >
+                          <?php if (isset($_SESSION['success'])): ?>
+            <div class="error success">
+                <h3>
+                    <?php 
+                        echo $_SESSION['success'];
+                        unset($_SESSION['success']);
+                    ?>
+                </h3>
+            </div>
+        <?php endif ?>
 
+        <?php if (isset($_SESSION["username"])): ?>
+            <p>Welcome <strong><?php echo $_SESSION['username']; ?></strong></p>
+            <p><a href="index.php?logout='1'" style="color: red;">Logout</a></p>
+        <?php endif ?-->
+<!--####################################################################################################################### -->
 
  <!----------Login button----->
 
