removing  my trips and editing user drop down

--- a/home/index/index.html
+++ b/home/index/index.html
@@ -205,7 +205,6 @@
                 <ul class="navbar-nav mr-auto"> 
                     
                     <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">My Trips</a></li>
                     <!--Attraction dropdown-->
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown"
@@ -372,7 +371,7 @@
                             href="#" role="button" aria-haspopup="true" aria-expanded="false">
                             User</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html">My Profile</a>
+                            <a class="dropdown-item" href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html">Profile Settings</a>
                             <a class="dropdown-item" href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html">My Favourite</a>
                             <a class="dropdown-item" href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html">My Trips</a>
                				<a class="dropdown-item" href="file:///C:/xampp/htdocs/CA-web-development-project/home/Explore/test%201.html">Log Out</a>
