--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -267,7 +267,7 @@
 
 
          <div class="map">
-            <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="400" height="500"></iframe>
+            <iframe src="https://www.google.com/maps/d/embed?mid=17WqQPF-grsLrI2q3rxfy0RuQTOnG6R7L" width="100%" height="800"></iframe>
          
         </div>
                   
