--- a/home/Explore 2/explore.html
+++ b/home/Explore 2/explore.html
@@ -9,7 +9,11 @@
     <body>
         
         <div class="container">
-            <div class="box"></div>
+            <div class="box">
+                <div class="imgBox">
+                    <img src="1.jpg">
+                </div>
+            </div>
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
