--- a/footer_for_prineth/foot.html
+++ b/footer_for_prineth/foot.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
     <body>
+    <footer>
         <div class="footer-main">
                        <!--Simple about us part-->
            <div class="footer-sec-aboutus">
@@ -46,6 +47,7 @@
             &copy; aroundlanka.com | Designed by Log D
         </div>
         </div>
+    </footer>
     </body>
     
 </html>
