--- a/home/index/register/logx.html
+++ b/home/index/register/logx.html
@@ -33,7 +33,7 @@
                                                         <td><input type="checkbox" checked="checked" name="remember"> Remember me</td>
                                                     </tr>
                                                     <tr>
-                                                        <td colspan="2">Already a member?<a href="#">Sign Up</a></td>
+                                                        <td colspan="2">Already a member?<a href="register.php">Sign Up</a></td>
                                                     </tr>
                                                 </table>
                                             </form>
