--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -60,10 +60,9 @@
         <!-- bread crumbs -->
   
     <ul class="breadcrumb">
-      <li><a href="../../../../../index/index.php">Home</a></li>
-      <li><a href="../../../../test 1.html">Explore</a></li>
-      <li><a href="../table.html">Ancient Cities</a></li>
-      <li>Anuradapura</li>
+      <li><a href="../index/index2.php">Home</a></li>
+      <li>Explore</li>
+   
     </ul>
        
 <div  class="flex-container">
