--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -19,7 +19,7 @@
 
     <label class="logo">TravelLanka</label>
     <ul>
-      <li><a href="../../../../../index/index.php">Home</a></li>
+      <li><a href="../index/index.php">Home</a></li>
       <div class="dropdown">
         <!--<a class="dropbtn">Dropdown</a>--> 
         <li><a class="active" class="dropbtn" href="#">Attraction</a></li>
@@ -60,7 +60,7 @@
         <!-- bread crumbs -->
   
     <ul class="breadcrumb">
-      <li><a href="../index/index2.php">Home</a></li>
+      <li><a href="../index/index.php">Home</a></li>
       <li>Explore</li>
    
     </ul>
