--- a/home/Explore/test 1.html
+++ b/home/Explore/test 1.html
@@ -17,7 +17,7 @@
         <i class="fas fa-bars"></i>
     </label>
 
-    <label class="logo">TravelLanka</label>
+    <label class="logo">AroundLanka</label>
     <ul>
       <li><a href="../index/index.php">Home</a></li>
       <div class="dropdown">
