--- a/Banner/banner.html
+++ b/Banner/banner.html
@@ -3,7 +3,7 @@
 <head>
 
 	<title></title>
-	<link rel="stylesheet" href="C:\Users\DELL\Desktop\banner\banner.css">
+	<link rel="stylesheet" href="C:\xampp\htdocs\CA-web-development-project\Banner\banner.css">
 </head>
 <body>
 	<section id="header">
