--- a/Banner/banner.html
+++ b/Banner/banner.html
@@ -11,6 +11,9 @@
 			<div class="header-text">
 				<h1>Protect yourself and others from getting sick</h1>
 				<h2> Wash your hands</h2>
+				<p>Sri Lanka is sucessfully contrling Covid-19 Corona virus cases at the moment
+Sri LAnka Ministry of Health and Indigenous Medical Services in collaboration with WHO Country Office for Sri Lanka is closely monitoring the situation preparedness. We are closely working with main institutions like the Ministry of Foreign Relations and Points of Entry authorities.
+Misinformation can facilitate transmission and cost lives. We encourage all to seek haccurate, valid sources of information that empower our friends, families & communities to stay healthy. Solidarity is one of our more formidable weapons. We have a part to play at this moment and we must look after one another.
 				<ul>
 					<li>Wash them after coughing or sneezing</li>
 					<li>When caring for the sick</li>
