--- a/Banner/banner.html
+++ b/Banner/banner.html
@@ -9,7 +9,7 @@
 	<section id="header">
 		<div class="container">
 			<div class="header-text">
-				<h1 align to="center">Protect yourself and others from getting sick</h1>
+				<h1>Protect yourself and others from getting sick</h1>
 				<h2> Wash your hands</h2>
 				<ul>
 					<li>Wash them after coughing or sneezing</li>
