--- a/home/aboutus/privacypolicy/policy.html
+++ b/home/aboutus/privacypolicy/policy.html
@@ -1,18 +1,20 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Privacy Policy</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
-    
+<!DOCTYPE html>
+<html>
+<head>
+	<title>About Us</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="all">
-<h2 style="text-align: center;"><b>PRIVACY POLICY</b></h2>
-<br>
-<p>Effective date: 2020-11-21</p>
-<p>1. <b>Introduction</b></p>
+
+	<div class="header">
+		<div class="main">
+		<h1 class="display-2 text-secondary col-sm-12 font-weight-bold">Privacy Policy</h1>
+		<h5>
+
+		
 <p>Welcome to <b> Around Lanka</b>.</p>
 <p><b>Around Lanka</b> (“us”, “we”, or “our”) operates <b>aroundslanka.com</b> (hereinafter referred to as <b>“Service”</b>).</p>
 <p>Our Privacy Policy governs your visit to <b>aroundslanka.com</b>, and explains how we collect, safeguard and disclose information that results from your use of our Service.</p>
@@ -147,6 +149,14 @@
 <p>22. <b>Contact Us</b></p>
 <p>If you have any questions about this Privacy Policy, please contact us by email: <b>aroundlanka@info.com</b>.</p>
 <p style="margin-top: 5em; font-size: 0.7em;">This <a href="https://policymaker.io/privacy-policy/">Privacy Policy</a> was created for <b>aroundslanka.com</b> by <a href="https://policymaker.io">PolicyMaker.io</a> on 2020-11-21.</p>
+
+		</h5>
+		<button class="btn">Read More</button>
+		</div>
+    </div>
+</body>
+</html>
+
 </div>
 </body>
 </html>
