--- a/home/aboutus/about/about.html
+++ b/home/aboutus/about/about.html
@@ -4,7 +4,7 @@
 	<title>About Us</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="C:\xampp\htdocs\CA-web-development-project\home\about us\about\style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="header">
